syntax = "proto3";

package bloock;

option go_package = "github.com/bloock/bloock-sdk-go/v2/internal/bridge/proto";
option java_package = "bloock.sdk.java.bridge.proto";

import "shared.proto";
import "config.proto";
import "record.proto";


service PublisherService {
    rpc Publish(PublishRequest) returns (PublishResponse);
}

enum PublisherType {
    HOSTED = 0;
}

message Publisher {
    PublisherType type = 1;
    PublisherArgs args = 2;
}

message PublisherArgs {}

message PublishRequest {
    ConfigData config_data = 1;
    Publisher publisher = 2;
    Record record = 3;
}

message PublishResponse {
    string hash = 1;
    optional Error error = 2;
}
